543-traffic-shifting/5432/istio-api/destination-rule-reviews.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
    - name: stable
      labels:
        app: reviews
    - name: canary
      labels:
        app: reviews
