543-traffic-shifting/5432/istio-api/virtual-service-ratings-abort.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings-abort
spec:
  hosts:
    - ratings
  http:
    - match:
        - headers:
            end-user:
              exact: admin
      fault:
        abort:
          percentage:
            value: 100
          httpStatus: 500
      route:
        - destination:
            host: ratings
            subset: v1
    - route:
      - destination:
          host: ratings
          subset: v1
